--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,6 @@
     <div class="spinner-container">
         <div class="spinner"></div>
     </div>
-    <p class="text">Loading...</p>
+    <p class="text">Loading....</p>
 </body>
 </html>
