--- a/index.html
+++ b/index.html
@@ -1,62 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Arjun's Blog</title>
 </head>
 <body>
-
-    <header>
-        <h1>Arjun's Blog</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#posts">Posts</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="home">
-        <h2>Welcome to Arjun's Blog</h2>
-        <p>Explore my thoughts and experiences.</p>
-    </section>
-
-    <section id="about">
-        <h2>About Arjun</h2>
-        <p>Introduce yourself and share a bit about your interests and background.</p>
-    </section>
-
-    <section id="posts">
-        <h2>Recent Posts</h2>
-        <article>
-            <h3>Post Title 1</h3>
-            <p>Date: January 29, 2024</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
-            <a href="#">Read more</a>
-        </article>
-
-        <article>
-            <h3>Post Title 2</h3>
-            <p>Date: January 28, 2024</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
-            <a href="#">Read more</a>
-        </article>
-
-        <!-- Add more posts as needed -->
-    </section>
-
-    <section id="contact">
-        <h2>Contact Arjun</h2>
-        <p>Email: arjun@email.com</p>
-        <p>LinkedIn: linkedin.com/in/arjunprofile</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Arjun's Blog. All rights reserved.</p>
-    </footer>
-
+    <div>THIS IS A BOX</div>
 </body>
 </html>
